fix(jvm): Eliminate the need to use '--add-exports' VM option